feat: changes made when moved to new office

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,12 +1,12 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-1,preferred,0x0,auto
-monitor=DP-2,preferred,-1920x0,auto
-monitor=DP-3,preferred,1920x0,auto
+monitor=DP-2,preferred,1920x0,auto
+# monitor=DP-3,preferred,1920x0,auto
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & hypridle & hyprpaper
+exec-once = waybar & dunst & hypridle & hyprpaper & wl-paste --watch cliphist store & /usr/bin/pipewire & /usr/bin/pipewire-pulse & /usr/bin/pipewire-media-session
 
 # Set programs that you use
 $terminal = wezterm
@@ -174,14 +174,14 @@ bindm = $mainMod, mouse:273, resizewindow
 # Organize workspaces by monitors
 workspace = 1, monitor:DP-1
 workspace = 2, monitor:DP-2
-workspace = 3, monitor:DP-3
-workspace = 4, monitor:DP-1
-workspace = 5, monitor:DP-1
-workspace = 6, monitor:DP-1
-workspace = 7, monitor:DP-1
-workspace = 8, monitor:DP-1
-workspace = 9, monitor:DP-1
-workspace = 10, monitor:DP-1
+workspace = 3, monitor:DP-2
+workspace = 4, monitor:DP-2
+workspace = 5, monitor:DP-2
+workspace = 6, monitor:DP-2
+workspace = 7, monitor:DP-2
+workspace = 8, monitor:DP-2
+workspace = 9, monitor:DP-2
+workspace = 10, monitor:DP-2
 
 # Volume
 binde =, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
