--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,52 +1,83 @@
-# https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
+source = /home/justin/.cache/wal/colors-hyprland.conf
+
+# BACKGROUND
 background {
     monitor =
-    # path = $HOME/.config/...
-    color = rgba(25, 20, 20, 1.0)
-
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
-    blur_size = 7
-    noise = 0.0117
-    contrast = 0.8916
-    brightness = 0.8172
-    vibrancy = 0.1696
-    brancy_darkness = 0.0
+    #path = screenshot
+    path = ~/.wallpapers/neon.png
+    #color = $background
+    blur_passes = 2
+    contrast = 1
+    brightness = 0.5
+    vibrancy = 0.2
+    vibrancy_darkness = 0.2
 }
 
+# GENERAL
+general {
+    # no_fade_in = true
+    # no_fade_out = true
+    hide_cursor = false
+    grace = 0
+    disable_loading_bar = true
+}
+
+# INPUT FIELD
 input-field {
     monitor =
-    size = 200, 50
-    outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
+    size = 250, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
-    dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb(151515)
-    inner_color = rgb(200, 200, 200)
-    font_color = rgb(10, 10, 10)
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(0, 0, 0, 0.2)
+    font_color = $foreground
     fade_on_empty = false
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    rounding = -1 # -1 means complete rounding (circle/oval)
+    rounding = -1
     check_color = rgb(204, 136, 34)
-    fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
-    fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-
-    position = 0, -20
+    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+    hide_input = false
+    position = 0, -200
     halign = center
     valign = center
 }
 
+# DATE
 label {
-    monitor =
-    text = <b>$TIME</b><br/>Hi there, $USER
-    color = rgba(200, 200, 200, 1.0)
-    font_size = 25
-    font_family = JetBrains Mono Nerd Font
+  monitor =
+  text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 22
+  font_family = JetBrains Mono
+  position = 0, 300
+  halign = center
+  valign = center
+}
 
-    position = 0, 80
+# TIME
+label {
+  monitor = 
+  text = cmd[update:1000] echo "$(date +"%-I:%M")"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 95
+  font_family = JetBrains Mono Extrabold
+  position = 0, 200
+  halign = center
+  valign = center
+}
+
+
+
+# Profile Picture
+image {
+    monitor =
+    path = /home/justin/Pictures/profile_pictures/justin_square.png
+    size = 100
+    border_size = 2
+    border_color = $foreground
+    position = 0, -100
     halign = center
     valign = center
 }
+
