--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,5 +1,3 @@
-source = /home/justin/.cache/wal/colors-hyprland.conf
-
 # BACKGROUND
 background {
     monitor =
@@ -27,12 +25,12 @@ input-field {
     monitor =
     size = 250, 60
     outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_size = 0.25 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.35 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     outer_color = rgba(0, 0, 0, 0)
     inner_color = rgba(0, 0, 0, 0.2)
-    font_color = $foreground
+    font_color = rgb(205, 214, 244)
     fade_on_empty = false
     rounding = -1
     check_color = rgb(204, 136, 34)
@@ -65,19 +63,5 @@ label {
   position = 0, 200
   halign = center
   valign = center
-}
-
-
-
-# Profile Picture
-image {
-    monitor =
-    path = /home/justin/Pictures/profile_pictures/justin_square.png
-    size = 100
-    border_size = 2
-    border_color = $foreground
-    position = 0, -100
-    halign = center
-    valign = center
 }
 
